--- a/DotnetHtmxTodoApp/DotnetHtmxTodoApp/wwwroot/css/index.css
+++ b/DotnetHtmxTodoApp/DotnetHtmxTodoApp/wwwroot/css/index.css
@@ -206,7 +206,7 @@ body {
 	background-position: center left;
 }
 
-.todo-list li .toggle:checked + label {
+.todo-list li .toggle[checked="checked"] + label {
 	background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%2359A193%22%20stroke-width%3D%223%22%2F%3E%3Cpath%20fill%3D%22%233EA390%22%20d%3D%22M72%2025L42%2071%2027%2056l-4%204%2020%2020%2034-52z%22%2F%3E%3C%2Fsvg%3E');
 }
 
