Added ISKS themed todo's and styling

--- a/Workshop/.NET/Solution/DotnetHtmxTodoApp/DotnetHtmxTodoApp/Views/Todo/Index.cshtml
+++ b/Workshop/.NET/Solution/DotnetHtmxTodoApp/DotnetHtmxTodoApp/Views/Todo/Index.cshtml
@@ -16,7 +16,7 @@
             <input
                 id="new-todo-input"
                 class="new-todo"
-                placeholder="What needs to be done?"
+                placeholder="What do i want to do this ISKS?"
                 autofocus
                 autocomplete="off"
                 name="title"/>
